# RLWE-OKVS

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  binning.ipynb
backup/: okvs_backup.cpp  okvs_test.py
docs/: encrypted-alignment-design.tex  kkls-followup-brief.md  kkls-followup-note.tex  mybib.bib
exec/: CMakeLists.txt  main.cpp
experiments/real_okvs/: .gitignore  REPORT.md  ckks_decode.cpp  ckks_decode_multiblock.cpp  failprob  failprob.cpp  failprob.csv  failprob_fit.py  okvs_real  okvs_real.cpp  plot.py  results.csv  sequencing_compare
log/: okvs_nn16_probe_fit.tsv  okvs_nn18_probe_fit.tsv  okvs_nn20_probe_fit.tsv  okvs_nn22_probe_fit.tsv
log/okvs_width/nn10_ratio1.10_260404_104502/: autosweep_summary.txt  full_search.tsv
log/okvs_width/nn10_ratio1.20_260404_105309/: autosweep_summary.txt  full_search.tsv
log/okvs_width/nn10_ratio1.30_260404_105331/: autosweep_summary.txt  full_search.tsv
log/okvs_width/nn10_ratio1.40_260404_105525/: autosweep_summary.txt  full_search.tsv
log/okvs_width/nn10_ratio1.50_260404_105606/: autosweep_summary.txt  full_search.tsv
log/okvs_width/nn10_ratio1.60_260404_105638/: autosweep_summary.txt  full_search.tsv
log/okvs_width/nn10_ratio1.70_260404_105707/: autosweep_summary.txt  full_search.tsv
log/okvs_width/nn10_ratio1.80_260404_105730/: autosweep_summary.txt  full_search.tsv
log/okvs_width/nn10_ratio1.90_260404_105752/: autosweep_summary.txt  full_search.tsv
log/okvs_width/nn10_ratio2.00_260404_035545/: autosweep_summary.txt  full_search.tsv
log/okvs_width/nn10_ratio2.10_260404_035612/: autosweep_summary.txt  full_search.tsv
log/okvs_width/nn10_ratio2.20_260404_035640/: autosweep_summary.txt  full_search.tsv
log/okvs_width/nn10_ratio2.30_260404_035704/: autosweep_summary.txt  full_search.tsv
log/realresults/: nn16_cli_all_raw_real.txt  nn16_cli_all_summary_real.txt  nn18_cli_all_raw_real.txt  nn18_cli_all_summary_real.txt  nn20_cli_all_raw_real.txt  nn20_cli_all_summary_real.txt  nn22_cli_all_raw_real.txt  nn22_cli_all_summary_real.txt
rlwe-okvs/: CMakeLists.txt  pso.cpp  pso.h  psu.cpp  psu.h  rpmt.cpp  rpmt.h  rpmt_.cpp  rpmt_.h
rlwe-okvs/GMW/: Circuit.cpp  Circuit.h  Gmw.cpp  Gmw.h  SilentTripleGen.cpp  SilentTripleGen.h  TripleGen.cpp  TripleGen.h
rlwe-okvs/band_okvs/: cpsi.cpp  cpsi.h  oprf.cpp  oprf.h  utils.h
rlwe-okvs/rlwe-okvs/: backup.cpp  backup.h  okvs.cpp  okvs.h  rpmt.cpp  rpmt.h  sspmt.cpp  sspmt.h
scripts/: run_psi_card_sweep.sh  width_test_autosweep.sh  width_test_probe_fit.sh
tests/: CMakeLists.txt  CPSI_tests.cpp  CPSI_tests.h  GMW_tests.cpp  GMW_tests.h  OKVS_Tests.h  OKVS_tests.cpp  OKVS_tests.h  OPRF_Tests.h  OPRF_tests.cpp  PSO_tests.cpp  PSO_tests.h  PSU_tests.cpp  PSU_tests.h  RPMT_tests.cpp  RPMT_tests.h  SEAL_tests.cpp  SEAL_tests.h  SEQ_tests.cpp  SEQ_tests.h  SSPMT_tests.cpp  SSPMT_tests.h  UnitTests.cpp  UnitTests.h
(+20 files in other folders)
